--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,119 +1,79 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 100vh;
+  color: #e9f4f1;
 }
 
-.title a {
-  color: #f213a4;
-  text-decoration: none;
-}
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.connect {
-  margin-bottom: 2rem;
-  width: 230px;
-}
-
-.description {
-  margin-top: 3rem;
-  margin-bottom: 2rem;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.content {
   display: flex;
-  align-items: center;
+  width: 80%;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 1200px;
+  gap: 10rem;
+  margin: 0 auto;
 }
 
-.card {
-  background-color: #1b2129;
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 350px;
-}
 
-.card:hover,
-.card:focus,
-.card:active {
-  background-color: #272c34;
-  color: #0ea5e9;
-  border-color: #0ea5e9;
-}
 
-.card h2 {
-  margin: 0 0 1rem 0;
+.createProposalForm {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 1rem;
+  border: 1px solid #2d2d2d;
+  border-radius: 1rem 2rem;
   font-size: 1.5rem;
+  position: fixed;
+  /* left: 20vw; */
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+@media only screen and (max-width: 1000px) {
+  .createProposalForm {
+    display: none;
+  }
+  .proposals {
+    margin-right: 10rem;
   }
 }
 
-.card,
-.footer {
-  border-color: #222;
+.formTitle {
+  font-size: 2rem;
+  font-weight: bold;
+  /* margin-bottom: 1rem; */
+  flex: 1;
 }
-.code {
-  background: #111;
+
+.formInput {
+  margin-bottom: 1rem;
+  padding: 0.8rem;
+  border-radius: 0.5rem;
+  outline: none;
+  border: 1px solid #2d2d2d;
+  background-color: transparent;
+  color: #eee;
 }
-.logo img {
-  filter: invert(1);
+
+.formButton {
+  background-color: #2d2d2d;
+  color: #eee;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.8rem;
+  outline: none;
+  cursor: pointer;
+}
+
+.formButton:hover {
+  border: 1px solid #eee;
+  color: #eee;
+  transition: all 0.6s ease-in-out;
+}
+.proposals {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10rem;
+  gap: 1rem;
+  padding: 1rem 4rem;
+
+  border-radius: 1rem;
 }
